--- a/desafio/desadio012/style.css
+++ b/desafio/desadio012/style.css
@@ -1,12 +1,21 @@
 @charset "UTF-8"; 
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&family=Sriracha&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2:'Passion One', cursive;
+    --font3:'Sriracha', cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1);
 }
 header{
     background-color: black;
@@ -16,6 +25,8 @@ header{
 header > h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -24,6 +35,7 @@ header a, footer a{
     color: white;
     text-decoration: none;
     font-weight: bolder;
+    font-size: 2em;
 }
 header a:hover, footer a:hover{
     text-decoration: underline;
@@ -33,6 +45,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -44,7 +58,8 @@ section.imagem{
     color: white;
 }
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgb(0, 0, 0, 0.266);
 }
 footer{
