--- a/desafio/desadio012/style.css
+++ b/desafio/desadio012/style.css
@@ -35,7 +35,7 @@ header a, footer a{
     color: white;
     text-decoration: none;
     font-weight: bolder;
-    font-size: 2em;
+    font-size: 1em;
 }
 header a:hover, footer a:hover{
     text-decoration: underline;
@@ -48,6 +48,9 @@ section{
     font-family: var(--font3);
     font-size: 3.5vw;
 }
+section > p{
+    padding-bottom: 2em;
+}
 section.normal{
     background-color: white;
     color: black;
@@ -56,11 +59,23 @@ section.normal{
 section.imagem{
     background-color: rgb(51, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgb(0, 0, 0,0.473);
+    background-size: cover;
+    background-attachment: fixed;
 }
+
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgb(0, 0, 0, 0.266);
+    background-color: rgb(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+section#img01{
+    background-image: url('../desadio012/imagens/background001.jpg');
+    background-position: right center;
+}
+section#img02{
+    background-image: url('../desadio012/imagens/background002.jpg');
 }
 footer{
     background-color: black;
